# tools-server

./: config.json  main.py  process.py  pyproject.toml  requirements.txt
db/: db.py  server.db
media_info/: 07ab2ce0-b3e6-482e-8690-358754dfc293.json  46dd4a8b-48fe-43cb-81b9-4df9381cb920.json  b1ba4dda-5800-4687-a706-50cf7121c079.json  c16ac9e9-b550-4e35-9d2d-b24ad386a48b.json
router/: chart_dl.py  file_dl.py  media_dl.py  media_dl_adm.py  media_dl_api.py  media_dl_download.py  media_dl_json.py  sus2svg.py
templates/: index.html  maintenance.html  sus2svg.html
templates/css/: style.css
templates/media_dl/: history.html  index.html  info.html  info_niconico.html  info_youtube.html
